Direct payment page layout bugs fixed.

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -116,3 +116,6 @@ b
 .block-wrapper
     min-height: 100vh
     padding-top: 81px
+    header
+        margin-top: -81px
+        position: static
